microservice-example/overlays/prod/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-name
spec:
  ingressClassName: nginx
  rules:
  - host: ms-name.domain.com
    http:
      paths:
      - backend:
          service:
            name: ms-name
            port:
              number: 80
        path: /
        pathType: Prefix
